--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -5,13 +5,31 @@
   --main-text-color: #333333;
 }
 
+.page-footer{
+	
+	padding: 0.3rem 0;
+	font-size: 2rem;
+	background-color: transparent;
+}
 
-
-
+.footerStyle{
+	position: relative;
+	z-index: 99;
+	bottom: 0;
+	width: 100%;
+}
 
 .FooterFix{
-	 
-   
-
+	 /*position: fixed;*/
+	 padding: 5.4rem 0 0  0;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   background-color: transparent;
+   text-align: center;
    /*box-shadow:inset 20rem 0rem 2rem #e6fbff;*/
 }
