--- a/src/components/project/ValidationForm/style.css
+++ b/src/components/project/ValidationForm/style.css
@@ -20,7 +20,7 @@
 
 .lableClass {
   z-index: 1;
-  
+
   border: 1px solid transparent;
   line-height: 30px;
   height: 30px;
@@ -57,6 +57,14 @@ body, .inputBox {
 
 .ButtonStyle{
   background-color: #3a2397;
-  width: 15%;
+  /*width: 15%;*/
+  color: #ffff;
+  font-size: 1.5rem;
+  padding: 0.9rem 0;
   font-weight: bolder;
+}
+
+.ErrorMsg{
+  display: flex;
+  justify-content: right;
 }
