--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,14 @@
 }
 
 html{
-  height: 100vh;
-  box-shadow:inset 30rem 0rem 40rem #e6fbff;
+  /*height: 100%;*/
+ 
 }
 body {
   margin: 0;
   width: 100%;
   height: 100%;
+  box-shadow:inset 50px 0rem 40rem #e6fbff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
